// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid integer 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "'nope' is not a integer

",
  "stdout": "[time] ERROR (#17): [object Object]
",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing required plan 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "Expected to find option: '--plan'

",
  "stdout": "[time] ERROR (#17): [object Object]
",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "[0;1m[0;37;1mnpm-release[0;1m[0m

npm-release 0.1.0

[0;1mUSAGE[0m

$ npm-release

[0;1mOPTIONS[0m

[0;1m--completions sh | bash | fish | zsh[0m

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell.

  This setting is optional.

[0;1m--log-level all | trace | debug | info | warning | error | fatal | none[0m

  One of the following: all, trace, debug, info, warning, error, fatal, none

  Sets the minimum log level for a command.

  This setting is optional.

[0;1m(-h, --help)[0m

  A true or false value.

  Show the help documentation for a command.

  This setting is optional.

[0;1m--wizard[0m

  A true or false value.

  Start wizard mode for a command.

  This setting is optional.

[0;1m--version[0m

  A true or false value.

  Show the version of the application.

  This setting is optional.

[0;1mCOMMANDS[0m

  - verify --plan file [--registry text] [--attempts integer] [--delay-seconds integer]  Verify that the registry serves the release described by a plan: version visibility, tarball digest, and dist-tag target.

",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > verify help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "[0;1m[0;37;1mnpm-release[0;1m[0m

npm-release 0.1.0

[0;1mUSAGE[0m

$ verify --plan file [--registry text] [--attempts integer] [--delay-seconds integer]

[0;1mDESCRIPTION[0m

Verify that the registry serves the release described by a plan: version visibility, tarball digest, and dist-tag target.

[0;1mOPTIONS[0m

[0;1m--plan file[0m

  A file.

  Path to a JSON verify plan: { schemaVersion, version, npmTag, packages }

[0;1m--registry text[0m

  A user-defined piece of text.

  Registry to query

  This setting is optional.

[0;1m--attempts integer[0m

  An integer.

  How many times to re-check a package that has not converged

  This setting is optional.

[0;1m--delay-seconds integer[0m

  An integer.

  Seconds to wait between convergence checks

  This setting is optional.

[0;1m--completions sh | bash | fish | zsh[0m

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell.

  This setting is optional.

[0;1m--log-level all | trace | debug | info | warning | error | fatal | none[0m

  One of the following: all, trace, debug, info, warning, error, fatal, none

  Sets the minimum log level for a command.

  This setting is optional.

[0;1m(-h, --help)[0m

  A true or false value.

  Show the help documentation for a command.

  This setting is optional.

[0;1m--wizard[0m

  A true or false value.

  Start wizard mode for a command.

  This setting is optional.

[0;1m--version[0m

  A true or false value.

  Show the version of the application.

  This setting is optional.

",
}
`;

exports[`npm-release CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "0.1.0

",
}
`;
